<resources>
    <string name="app_name">Vplan</string>
    <string name="baifenhao">%</string>
    <string name="weekofday">星期</string>
    <string name="username">用户名:</string>
    <string name="admin">admin</string>
    <string name="password">密码:</string>
    <string name="_123456">123456</string>
    <string name="remember">记住密码</string>
    <string name="load">登陆</string>
    <string name="todaynews">今日热闻</string>
    <string name="shoucang">我的收藏</string>
    <string name="denglu">请登录</string>
    <string name="offlinedownload">离线下载</string>
    <string name="todo">TODO</string>
    <string name="request_from_net">网络请求新闻</string>
    <string name="show_news_from_local">展示离线下载新闻</string>
    <string name="cannot_get_news">无离线下载，网络不可用</string>
    <string name="start_download">开始离线下载</string>
    <string name="fail_get_news">获取日报失败</string>
    <string name="bad_net">网络异常</string>
    <string name="deny_permission">您拒绝了权限请求</string>
    <string name="download_success">离线下载成功</string>
    <string name="complete"> 完成 </string>
    <string name="fail"> 失败 </string>
    <string name="latest_news_download_fail"> 最近新闻离线下载失败 </string>
    <string name="top_news_download_fail"> 顶部新闻离线下载失败 </string>
    <string name="today_news_download_fail"> 今日新闻离线下载失败 </string>
    <string name="before_news_download_fail"> 之前新闻离线下载失败 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desk">课桌</string>
    <string name="shop">商店</string>
    <string name="recharge">土豪币</string>
    <string name="grades">学霸券</string>
    <string name="purchased">已购项目</string>
    <string name="wifi">wifi设置</string>
    <string name="answer">答案</string>
    <string name="scratch_paper">草稿纸</string>
</resources>
